About: A basic hurricane simulator made for the Hypothetical Hurricanes Wiki. Soon to be more advanced.

v20180719a:
    * Fixed mouse events blocking default browser actions when cursor is outside the canvas, which made it impossible to access the changelog using the link (sorry)
    * Fixed first segment of tracks not rendering immediately
v20180718b:
    * Storms are for now named with a continuously looping 2022 Atlantic hurricane name list (Will be changed)
    * Tracks are no longer rendered every frame, but only when needed, making the sim run faster
    - Removed tracks dissappearing when the framerate drops below 25 fps, as it's no longer needed thanks to the improvement above
v20180718a:
    + Added names:
        > Depressions recieve a number with the suffix "H" for "Hypothetical"
        > Named storms are all named "Unnamed", as this is incomplete
    + Added code for environment factors such as "shear" and "SSTAnomaly", but are not in use yet
    * Changed each simulation tick from 30 minutes to an hour:
        > Storms now move twice as fast as seen by the viewer, although they move at the same speed in simulation time
        > Strengthening/weakening code is still the same per-tick, so behavior has changed somewhat
    * The time in the upper left uses a slightly different format now
    * Fixed keyboard events blocking default browser actions like "F5" for reload or "F12" for javascript console, except in cases involving keys used for the simulation ("space" doesn't scroll the page down)
v20180713a:
    + Added pausing using "space"
    + Added a date counter; currently serves no purpose
    + Added spawning using the keyboard and mouse:
        > Hold "D" and click to spawn a tropical depression
        > Hold "S" and click to spawn a tropical storm
        > Hold "1" and click to spawn a category 1 hurricane
        > So on for keys "2" through "5"
    + Added stepping one frame (30 sim-minutes) at a time while paused using "A"