@@ -2,10 +2,11 @@ const DIAMETER = 20;    // Storm icon diameter
 const CAT_COLORS = {};      // Category color scheme
 const PERLIN_ZOOM = 100;    // Resolution for perlin noise
 const TICK_DURATION = 3600000;  // How long in sim time does a tick last in milliseconds (1 hour)
-const TRACK_RESOLUTION = 6;    // Number of ticks per advisory
-const TRACK_AGELIMIT = 800;     // Number of ticks before track despawns
+const ADVISORY_TICKS = 6;    // Number of ticks per advisory
+// const TRACK_AGELIMIT = 800;     // Number of ticks before track despawns
 const START_TIME = moment.utc().startOf('year').valueOf();      // Unix timestamp for beginning of current year
 const TIME_FORMAT = "MMM D, Y HH[Z]";
+const DEPRESSION_LETTER = "H";
 const LAND_BIAS_FACTORS = [
     5/8,        // Where the "center" should be for land/ocean bias (0-1 scale from west to east)
     0.15,       // Bias factor for the west edge (positive = land more likely, negative = sea more likely)
@@ -37,29 +38,29 @@ const LIST_2 = [        // Temporary Hardcoded Name List
 ];
 
 function setup(){
-    setVersion("Very Sad HHW Thing v","20180719a");
+    setVersion("Very Sad HHW Thing v","20180721a");
 
-    // stormHistory = [];
-    // activeStorms = [];
-    canes = [];
+    seasons = {};
+    activeSystems = [];
     createCanvas(1100,500);
     colorMode(RGB);
     tick = 0;
+    viewTick = 0;
+    viewingPresent = true;
+    curSeason = getSeason(tick);
     paused = false;
     showStrength = false;
-    depressionCount = 0;
-    namedCount = 0;
     tracks = createGraphics(width,height);
     tracks.strokeWeight(2);
     stormIcons = createGraphics(width,height);
     stormIcons.noStroke();
     
     Env = new Environment();
-    Env.addField("shear",5,0.5,100,40,1.5,2); // shearNoise = new NoiseChannel();
-    Env.addField("steering",4,0.5,80,100,1,3); // steeringNoise = new NoiseChannel();
-    Env.addField("steeringMag",4,0.5,80,100,1,3); // steeringMagNoise = new NoiseChannel();
-    Env.addField("SSTAnomaly",6,0.5,150,1000,0.2,2); // SSTAnomalyNoise = new NoiseChannel();
-    Env.addField("moisture",4,0.5,130,100,1,2); // moistureNoise = new NoiseChannel();
+    Env.addField("shear",5,0.5,100,40,1.5,2);
+    Env.addField("steering",4,0.5,80,100,1,3);
+    Env.addField("steeringMag",4,0.5,80,100,1,3);
+    Env.addField("SSTAnomaly",6,0.5,150,1000,0.2,2);
+    Env.addField("moisture",4,0.5,130,100,1,2);
 
     testNoise = undefined;
     testNoiseLine = 0;
@@ -68,6 +69,7 @@ function setup(){
 
     createLand();
 
+    CAT_COLORS[-2] = color(130,130,240);
     CAT_COLORS[-1] = color(20,20,230);
     CAT_COLORS[0] = color(20,230,20);
     CAT_COLORS[1] = color(230,230,20);
@@ -79,39 +81,12 @@ function setup(){
 
 function draw(){
     background(0,127,255);
+    viewingPresent = viewTick === tick;
     stormIcons.clear();
     image(land,0,0,width,height);
     if(!paused) advanceSim();
-    for(let s of canes){
-        s.spin();
-        if(!s.dead){
-            stormIcons.push();
-            stormIcons.fill(CAT_COLORS[s.cat]);
-            stormIcons.translate(s.pos.x,s.pos.y);
-            stormIcons.ellipse(0,0,DIAMETER);
-            if(s.cat>-1){
-                stormIcons.push();
-                stormIcons.rotate(s.rotation);
-                stormIcons.beginShape();
-                stormIcons.vertex(DIAMETER*5/8,-DIAMETER);
-                stormIcons.bezierVertex(-DIAMETER*3/2,-DIAMETER*5/8,DIAMETER*3/2,DIAMETER*5/8,-DIAMETER*5/8,DIAMETER);
-                stormIcons.bezierVertex(DIAMETER*5/8,0,-DIAMETER*5/8,0,DIAMETER*5/8,-DIAMETER);
-                stormIcons.endShape();
-                stormIcons.pop();
-            }
-            stormIcons.fill(0);
-            stormIcons.textAlign(CENTER,CENTER);
-            stormIcons.text(s.cat>0 ? s.cat : s.cat===0 ? "S" : "D", 0, 0);
-            if(showStrength){
-                stormIcons.textSize(10);
-                stormIcons.text(floor(s.strength), 0, DIAMETER);
-            }
-            stormIcons.textAlign(LEFT,CENTER);
-            stormIcons.textSize(14);
-            stormIcons.text(s.name,DIAMETER,0);
-            stormIcons.pop();
-        }
-    }
+    if(viewingPresent) for(let s of activeSystems) s.renderIcon();
+    else for(let s of seasons[getSeason(viewTick)].systems) s.renderIcon();
 
     if(testNoise){
         for(let k=0;k<width;k+=10){
@@ -127,6 +102,16 @@ function draw(){
         image(testGraphics,0,0,width,height);
     }
 
+    let stormKilled = false;
+    for(let i=0;i<activeSystems.length;i++){
+        if(activeSystems[i].dead/*  && tick-activeSystems[i].deathTime>TRACK_AGELIMIT */){
+            activeSystems.splice(i,1);
+            i--;
+            stormKilled = true;
+        }
+    }
+    if(stormKilled) refreshTracks();
+
     image(tracks,0,0,width,height);
     image(stormIcons,0,0,width,height);
     fill(200,200,200,100);
@@ -135,83 +120,164 @@ function draw(){
     fill(0);
     textAlign(LEFT,TOP);
     textSize(18);
-    text(moment.utc(START_TIME+tick*TICK_DURATION).format(TIME_FORMAT),5,5);
-    let stormKilled = false;
-    for(let i=0;i<canes.length;i++){
-        if(canes[i].dead && tick-canes[i].dissipationTime>TRACK_AGELIMIT){
-            canes.splice(i,1);
-            i--;
-            stormKilled = true;
-        }
-    }
-    if(stormKilled) refreshTracks();
+    text(tickMoment(viewTick).format(TIME_FORMAT) + (viewingPresent ? '' : ' [Analysis]'),5,5);
 }
 
-class Cane{
+class Season{
+    constructor(){
+        this.systems = [];
+        this.depressions = 0;
+        this.namedStorms = 0;
+        this.hurricanes = 0;
+        this.majors = 0;
+    }
+}
+
+class StormSystem{
     constructor(x,y,s){
-        depressionCount++;
         this.pos = createVector(x,y);
         this.heading = p5.Vector.random2D().mult(2);
-        this.strength = s || random(25,50);
-        if(this.cat >= 0){
-            this.name = LIST_2[namedCount++ % LIST_2.length];
-            this.named = true;
-        }else{
-            this.name = depressionCount + "H";
-            this.named = false;
+        this.strength = s || random(15,50);
+        this.TC = this.isTropical;        // If the system has been a TC at any point in its life, not necessarily at present
+        this.depressionNum = undefined;
+        this.name = undefined;
+        this.named = false;
+        if(this.TC){
+            seasons[curSeason].systems.push(this);
+            this.depressionNum = ++seasons[curSeason].depressions;
+            if(this.isNameable){
+                this.name = LIST_2[seasons[curSeason].namedStorms++ % LIST_2.length];
+                this.named = true;
+            }else this.name = this.depressionNum + DEPRESSION_LETTER;
         }
+        this.hurricane = this.isHurricane;
+        this.major = this.isMajor;
         this.rotation = random(TAU);
         this.dead = false;
-        this.formationTime = tick;
-        this.dissipationTime = undefined;
-        this.track = [];
-        if(tick%TRACK_RESOLUTION===0) this.trackPoint();
+        this.birthTime = tick;                                      // Time formed as a disturbance/low
+        this.formationTime = this.TC ? tick : undefined;            // Time formed as a TC
+        this.dissipationTime = undefined;                           // Time degenerated/dissipated as a TC
+        this.deathTime = undefined;                                 // Time completely dissipated
+        this.namedTime = this.named ? tick : undefined;
+        this.record = [];
+        if(tick%ADVISORY_TICKS===0) this.advisory();
+        activeSystems.push(this);
     }
 
     update(){
         if(!this.dead){
+            let cSeason = seasons[curSeason];
+            let wasTCB4Update = this.isTropical;
             this.pos.add(this.heading);
             this.heading.rotate(random(-PI/16,PI/16));
             this.strength += random(-5,5.4) - getLand(this.pos.x,this.pos.y)*random(5)*pow(1.7,(this.strength-50)/40);
-            if(!this.named && this.cat >= 0){
-                this.name = LIST_2[namedCount++ % LIST_2.length];
-                this.named = true;
+            if(!this.TC && this.isTropical){
+                cSeason.systems.push(this);
+                this.TC = true;
+                this.formationTime = tick;
+                this.depressionNum = ++cSeason.depressions;
+                this.name = this.depressionNum + DEPRESSION_LETTER;
+                if(getSeason(this.birthTime)<curSeason) seasons[curSeason-1].systems.push(this); // Register precursor if it formed in previous season, but crossed into current season before becoming tropical
             }
+            if(!this.named && this.isNameable){
+                this.name = LIST_2[cSeason.namedStorms++ % LIST_2.length];
+                this.named = true;
+                this.namedTime = tick;
+            }
+            if(!this.hurricane && this.isHurricane){
+                cSeason.hurricanes++;
+                this.hurricane = true;
+            }
+            if(!this.major && this.isMajor){
+                cSeason.majors++;
+                this.major = true;
+            }
+            if(wasTCB4Update && !this.isTropical) this.dissipationTime = tick;
+            if(!wasTCB4Update && this.isTropical) this.dissipationTime = undefined;
             if(this.strength > 215) this.strength = 215;
-            if(this.strength < 20) this.dead = true;
+            if(this.strength < 0) this.dead = true;
             if(this.pos.x > width+DIAMETER*2 || this.pos.x < 0-DIAMETER*2 || this.pos.y > height+DIAMETER*2 || this.pos.y < 0-DIAMETER*2) this.dead = true;
-            if(!this.dead && tick%TRACK_RESOLUTION===0) this.trackPoint();
-            if(this.dead) this.dissipationTime = tick;
+            if(!this.dead && tick%ADVISORY_TICKS===0) this.advisory();
+            if(this.dead){
+                if(wasTCB4Update) this.dissipationTime = tick;
+                this.deathTime = tick;
+            }
         }
     }
 
-    spin(){
-        if(!this.dead) this.rotation -= 0.03*pow(1.01,this.strength);
+    aliveAt(t){
+        return t >= this.birthTime && (!this.dead || t < this.deathTime);
     }
 
-    trackPoint(){
-        let p = {pos:createVector(this.pos.x,this.pos.y),cat:this.cat};
-        let n = this.track.length-1;
+    renderIcon(){
+        if(this.aliveAt(viewTick)){
+            let trAdv = viewingPresent ? undefined : this.record[floor(viewTick/ADVISORY_TICKS)-ceil(this.birthTime/ADVISORY_TICKS)];
+            let st = viewingPresent ? this.strength : trAdv.strength;
+            let pos = viewingPresent ? this.pos : trAdv.pos;
+            let cat = viewingPresent ? this.cat : trAdv.cat;
+            let name = viewingPresent ? this.name : viewTick<this.formationTime ? undefined : viewTick<this.namedTime ? this.depressionNum+DEPRESSION_LETTER : this.name;
+            this.rotation -= 0.03*pow(1.01,st);
+            stormIcons.push();
+            stormIcons.fill(CAT_COLORS[cat]);
+            stormIcons.translate(pos.x,pos.y);
+            stormIcons.ellipse(0,0,DIAMETER);
+            if(cat>-1){
+                stormIcons.push();
+                stormIcons.rotate(this.rotation);
+                stormIcons.beginShape();
+                stormIcons.vertex(DIAMETER*5/8,-DIAMETER);
+                stormIcons.bezierVertex(-DIAMETER*3/2,-DIAMETER*5/8,DIAMETER*3/2,DIAMETER*5/8,-DIAMETER*5/8,DIAMETER);
+                stormIcons.bezierVertex(DIAMETER*5/8,0,-DIAMETER*5/8,0,DIAMETER*5/8,-DIAMETER);
+                stormIcons.endShape();
+                stormIcons.pop();
+            }
+            stormIcons.fill(0);
+            stormIcons.textAlign(CENTER,CENTER);
+            stormIcons.text(cat>0 ? cat : cat===0 ? "S" : cat===-1 ? "D" : "L", 0, 0);
+            if(showStrength){
+                stormIcons.textSize(10);
+                stormIcons.text(floor(st), 0, DIAMETER);
+            }
+            if(name){
+                stormIcons.textAlign(LEFT,CENTER);
+                stormIcons.textSize(14);
+                stormIcons.text(name,DIAMETER,0);
+            }
+            stormIcons.pop();
+        }
+    }
+
+    advisory(){
+        let p = {};
+        p.pos = {};
+        p.pos.x = floor(this.pos.x);
+        p.pos.y = floor(this.pos.y);
+        p.strength = this.strength;
+        p.cat = this.cat;
+        let n = this.record.length-1;
         if(n>=0){
-            let col = CAT_COLORS[this.track[n].cat];
+            let col = CAT_COLORS[this.record[n].cat];
             tracks.stroke(col);
-            let prevPos = this.track[n].pos;
+            let prevPos = this.record[n].pos;
             tracks.line(prevPos.x,prevPos.y,p.pos.x,p.pos.y);
         }
-        this.track.push(p);
+        this.record.push(p);
     }
 
     renderTrack(){
-        for(let n=0;n<this.track.length-1;n++){
-            let col = CAT_COLORS[this.track[n].cat];
-            tracks.stroke(col);
-            let pos = this.track[n].pos;
-            let nextPos = this.track[n+1].pos;
-            tracks.line(pos.x,pos.y,nextPos.x,nextPos.y);
+        if(this.aliveAt(viewTick)){
+            for(let n=0;n<this.record.length-1;n++){
+                let col = CAT_COLORS[this.record[n].cat];
+                tracks.stroke(col);
+                let pos = this.record[n].pos;
+                let nextPos = this.record[n+1].pos;
+                tracks.line(pos.x,pos.y,nextPos.x,nextPos.y);
+            }
         }
     }
 
     get cat(){
+        if(this.strength<20) return -2;
         if(this.strength<39) return -1;
         if(this.strength<74) return 0;
         if(this.strength<96) return 1;
@@ -220,7 +286,39 @@ class Cane{
         if(this.strength<157) return 4;
         return 5;
     }
+
+    get isTropical(){
+        return this.cat > -2;
+    }
+
+    get isNameable(){
+        return this.cat > -1;
+    }
+
+    get isHurricane(){
+        return this.cat > 0;
+    }
+
+    get isMajor(){
+        return this.cat > 2;
+    }
+
+    get namedAdvisory(){
+        return floor(this.namedTime/ADVISORY_TICKS);
+    }
+
+    get formationAdvisory(){
+        return floor(this.formationTime/ADVISORY_TICKS);
+    }
 }
+
+// class StormRender{
+
+// }
+
+// class StormData{
+
+// }
 
 class NoiseChannel{
     constructor(octaves,falloff,zoom,zZoom,wMax,zWMax,wRFac){
@@ -313,7 +411,8 @@ class Environment{
 
 function refreshTracks(){
     tracks.clear();
-    for(let s of canes) s.renderTrack();
+    if(viewingPresent) for(let s of activeSystems) s.renderTrack();
+    else for(let s of seasons[getSeason(viewTick)].systems) s.renderTrack();
 }
 
 function getLand(x,y){
@@ -355,10 +454,28 @@ function createLand(){
     }
 }
 
+function tickMoment(t){
+    return moment.utc(START_TIME+t*TICK_DURATION);
+}
+
+function getSeason(t){
+    return tickMoment(t).year();
+}
+
 function advanceSim(){
     tick++;
+    viewTick = tick;
+    if(!viewingPresent) refreshTracks();
+    curSeason = getSeason(tick);
+    if(!seasons[curSeason]){
+        let e = new Season();
+        for(let s of activeSystems){
+            if(s.TC) e.systems.push(s);
+        }
+        seasons[curSeason] = e;
+    }
     Env.wobble();
-    for(let s of canes){
+    for(let s of activeSystems){
         s.update();
     }
     if(random()>0.99){
@@ -368,7 +485,7 @@ function advanceSim(){
             spawnX = random(0,width);
             spawnY = random(0,height);
         }while(getLand(spawnX,spawnY));
-        canes.push(new Cane(spawnX,spawnY));
+        new StormSystem(spawnX,spawnY);
     }
 }
 
@@ -378,21 +495,23 @@ function mouseInCanvas(){
 
 function mouseClicked(){
     if(mouseInCanvas()){
-        if(keyIsPressed) {
-            if(key === "d" || key === "D"){
-                canes.push(new Cane(mouseX,mouseY,30));
+        if(keyIsPressed && viewingPresent) {
+            if(key === "l" || key === "L"){
+                new StormSystem(mouseX,mouseY,10);
+            }else if(key === "d" || key === "D"){
+                new StormSystem(mouseX,mouseY,30);
             }else if(key === "s" || key === "S"){
-                canes.push(new Cane(mouseX,mouseY,50));
+                new StormSystem(mouseX,mouseY,50);
             }else if(key === "1"){
-                canes.push(new Cane(mouseX,mouseY,80));
+                new StormSystem(mouseX,mouseY,80);
             }else if(key === "2"){
-                canes.push(new Cane(mouseX,mouseY,105));
+                new StormSystem(mouseX,mouseY,105);
             }else if(key === "3"){
-                canes.push(new Cane(mouseX,mouseY,120));
+                new StormSystem(mouseX,mouseY,120);
             }else if(key === "4"){
-                canes.push(new Cane(mouseX,mouseY,145));
+                new StormSystem(mouseX,mouseY,145);
             }else if(key === "5"){
-                canes.push(new Cane(mouseX,mouseY,170));
+                new StormSystem(mouseX,mouseY,170);
             }
         }
         return false;
@@ -403,6 +522,10 @@ function keyPressed(){
     switch(key){
         case " ":
         paused = !paused;
+        if(!viewingPresent){
+            viewTick = tick;
+            refreshTracks();
+        }
         break;
         case "A":
         if(paused) advanceSim();
@@ -411,7 +534,19 @@ function keyPressed(){
         showStrength = !showStrength;
         break;
         default:
-        return;
+        switch(keyCode){
+            case LEFT_ARROW:
+            if(paused && viewTick>=ADVISORY_TICKS) viewTick = ceil(viewTick/ADVISORY_TICKS-1)*ADVISORY_TICKS;
+            refreshTracks();
+            break;
+            case RIGHT_ARROW:
+            if(paused && viewTick<tick-ADVISORY_TICKS) viewTick = floor(viewTick/ADVISORY_TICKS+1)*ADVISORY_TICKS;
+            else viewTick = tick;
+            refreshTracks();
+            break;
+            default:
+            return;
+        }
     }
     return false;
 }
